--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -28,9 +28,9 @@ jobs:
     - name: Set output
       id: vars
       run: |
-        echo ::set-output name=date::$(date +'%Y%m%d')
-        echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
-        echo ::set-output name=rep::$(echo $GITHUB_REPOSITORY | sed 's/-docker$//')
+        echo "date=$(date +'%Y%m%d')" >> $GITHUB_ENV
+        echo "tag=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+        echo "rep=$(echo $GITHUB_REPOSITORY | sed 's/-docker$//'" >> $GITHUB_ENV
 
     # Runs a single command using the runners shell
     - name: Install buildx
@@ -47,8 +47,8 @@ jobs:
     - name: Build the image
       run: |
         docker buildx build --push \
-            --tag ${{ steps.vars.outputs.rep }}:${{ matrix.python-version }} \
-            --tag ${{ steps.vars.outputs.rep }}:${{ matrix.python-version }}-latest \
-            --tag ${{ steps.vars.outputs.rep }}:${{ matrix.python-version }}-${{ steps.vars.outputs.tag }} \
+            --tag ${{ env.rep }}:${{ matrix.python-version }} \
+            --tag ${{ env.rep }}:${{ matrix.python-version }}-latest \
+            --tag ${{ env.rep }}:${{ matrix.python-version }}-${{ env.tag }} \
             --build-arg PYVER=${{ matrix.python-version }} \
             --platform linux/amd64 .
