--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python-version: ['3.9', '3.10', '3.11']
+        python-version: ['3.10']
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -53,6 +53,7 @@ jobs:
       - name: Build the image
         run: |
           docker buildx build --push \
+              --tag ${{ env.rep }}:latest \
               --tag ${{ env.rep }}:${{ matrix.python-version }} \
               --tag ${{ env.rep }}:${{ matrix.python-version }}-latest \
               --tag ${{ env.rep }}:${{ matrix.python-version }}-${{ env.tag }} \
